--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/Model_1.jpg" class="image filtered span-3" data-position="bottom"><img src="images/Model 4_page-0001.jpg" alt="" /></a>
-										<a href="images/PXL_20221025_184144663.jpg" class="image filtered span-1-5" data-position="center"><img src="images/Model 2_page-0001.jpg" alt="" /></a>
-										<a href="images/PXL_20221025_184235620.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/Side view North-Model_page-0001.jpg" alt="" /></a>
+										<a href="images/Model 4_page-0001.jpg.jpg" class="image filtered span-3" data-position="bottom"><img src="images/Model 4_page-0001.jpg" alt="" /></a>
+										<a href="images/Model 2_page-0001.jpg" class="image filtered span-1-5" data-position="center"><img src="images/Model 2_page-0001.jpg" alt="" /></a>
+										<a href="images/Side view North-Model_page-0001.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/Side view North-Model_page-0001.jpg" alt="" /></a>
 									</div>
-									<a href="images/PXL_20221025_184117121.jpg" class="image filtered span-2-5" data-position="top"><img src="images/Screenshot (212).jpg" alt="" /></a>
+									<a href="images/Screenshot (212).jpg" class="image filtered span-2-5" data-position="top"><img src="images/Screenshot (212).jpg" alt="" /></a>
 									<div class="group span-4-5">
 										<a href="images/Model_1.jpg" class="image filtered span-3" data-position="bottom"><img src="images/Model_1.jpg" alt="" /></a>
 										<a href="images/Screenshot (213).jpg" class="image filtered span-3" data-position="bottom"><img src="images/Screenshot (213).jpg" alt="" /></a>
