--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">AutoCAD<br />
 									</h1>
-									<p>Over the past 3 semester of my college life I have been working with AutoCAD, designing projects and brainstorming different ideas. Here are a couple of examples.<strong></strong> <a href="https://html5up.net"></a></p>
+									<p>Throughout the past three semesters, I've had the opportunity to immerse myself in AutoCAD, and it's been a journey of practical learning. This software has become more than just a tool; it's become an extension of my creativity and problem-solving abilities.One of the most rewarding aspects of my AutoCAD journey has been the chance to use it in real-world design projects. From architectural plans to engineering diagrams, I've taken concepts from paper to digital reality. This hands-on experience has deepened my understanding of design principles and technical execution.<strong></strong> <a href="https://html5up.net"></a></p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -44,7 +44,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major"></h2>
-									<p>Here is a series of pictures.</p>
+									<p>AutoCAD isn't just about creating aesthetically pleasing designs; it's about problem-solving. I've encountered design challenges that have required me to think critically and find efficient solutions, further enhancing my ability to tackle real-world design problems. Here is a series of pictures.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
